# dm4

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
dm4/: __init__.py  __main__.py  dm4file.py  headers.py  helpers.py
dm4reader/: __init__.py  dm4file.py  headers.py
test/: test_dm4.py
