[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dm4"
authors = [{ name = "James Anderson", email = "james.r.anderson@utah.edu" }]
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "numpy",
]

[project.urls]
Home = "https://github.com/nornir/dm4"
Issues = "https://github.com/nornir/dm4/issues"